# PasswordManager

./: .gitignore  CMakeLists.txt  License.rts  README.md  authentication.cpp  authentication.h  createaccount.cpp  createaccount.h  createaccount.ui  dashboard.cpp  dashboard.h  dashboard.ui  loginpage.cpp  loginpage.h  loginpage.ui  main.cpp  passwordgenerator.cpp  passwordgenerator.h  passwordgeneratorpage.cpp  passwordgeneratorpage.h  passwordgeneratorpage.ui  passwordmanager.cpp  passwordmanager.h  passwordmanager.ui  passwordmanagerio.cpp  passwordmanagerio.h  pom.xml  resources.qrc  settingspage.ui
.github/workflows/: maven-publish.yml
pages/login/: loginpage.cpp  loginpage.h  loginpage.ui
pages/signup/: createaccount.cpp  createaccount.h  createaccount.ui
pages/view/dashboard/: dashboard.cpp  dashboard.h  dashboard.ui
pages/view/passwordGenerator/: passwordgeneratorpage.cpp  passwordgeneratorpage.h  passwordgeneratorpage.ui
src/main/java/: module-info.java
src/main/java/com/example/passwordmanager/: LoginController.java  PasswordManagerApplication.java  SignupController.java
src/main/java/com/example/passwordmanager/controllers/: LoginController.java  MainAppController.java  SignupController.java
src/main/java/com/example/passwordmanager/dialogs/: AlertDialog.java
src/main/java/com/example/passwordmanager/mongodb/: MongoClientConnection.java  MongoDBConnector.java
src/main/java/com/example/passwordmanager/utility/: FormValidator.java  MongoClientConnection.java  RunInBackground.java  SceneNavigator.java  UrlEncoder.java  ValidationError.java
src/main/resources/com/example/passwordmanager/: login.fxml  main.fxml  signup.fxml
utility/: authentication.cpp  authentication.h  passwordgenerator.cpp  passwordgenerator.h  passwordmanagerio.cpp  passwordmanagerio.h  platformaccount.h  userauthdata.h  userdatahandler.cpp  userdatahandler.h
